# getignore

./: .gitignore  Cargo.toml  mise.toml
data/: trees.json
src/: aliases.txt  catalogue.rs  errors.rs  github.rs  main.rs  options.rs  resolve.rs  store.rs
tests/fixtures/: branch-fixture.json  cache-fixture.json  commit-fixture.json  trimmed-trees.json  truncated-trimmed-trees.json
