[package]
name = "getignore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
etcetera = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["std"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = { version = "3.3.0", features = ["json"] }
