[package]
name = "getignore"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
etcetera = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["std"] }
strsim = "0.11.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "3.3.0", features = ["json"] }
